# memex-kb

./: .gitignore  .secretlintrc.json  AGENTS.md  BACKENDS.md  CHANGELOG.md  DEVELOPMENT.md  NEXT.md  README.md  README_SECURITY.md  flake.nix  package.json  requirements.txt  run.sh  shell.nix
.beads/: config.yaml  issues.jsonl
config/: .env.example  categories.yaml
docs/: 20251015T150842--dooray-api-기술-조사__dooray_api_research.md  20251015T150842--dooray-api-기술-조사__dooray_api_research.org  20251015T180500--memex-kb-rag-통합-전략__rag_embedding_architecture.md  20251015T180500--memex-kb-rag-통합-전략__rag_embedding_architecture.org  20251015T182000--embedding-config-경험-통합-가이드__embedding_integration.md  20251015T182000--embedding-config-경험-통합-가이드__embedding_integration.org  20251015T184500--chonkie-적용-가능성-분석__chonkie_evaluation.md  20251015T184500--chonkie-적용-가능성-분석__chonkie_evaluation.org  20251015T201500--emacs-community-rag-wisdom__emacs_org_rag_philosophy.md  20251015T201500--emacs-community-rag-wisdom__emacs_org_rag_philosophy.org  20251016T140000--구조화-데이터-임베딩-가치-벤치마크__benchmark_structured_embedding.org  20251107T123200--threads-aphorism-exporter-프로젝트__threads_aphorism_assholism.org  20251107T145225--threads-api-데이터-구조-분석__threads_api_analysis.org  20251112T194526--utf8-정규화-완벽-가이드-confluence-emacs__unicode_nfc_nfd_confluence_emacs.org  20251116T000246--threads-aphorisms-junghanacs__threads_aphorism.org  20260306T120000--정부-rnd-제안서-협업-워크플로우__workflow_orgmode_proposal.org  BACKENDS.md  DENOTE-RULES.md  DEVELOPMENT.md  (+2 more)
mineru-client/: .gitignore  README.md  pyproject.toml
(+143 files in other folders)
